<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaRankItemsActivity">

    <TextView
        android:id="@+id/titleRankList"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:text="@string/rank_list" />
    <TextView
        android:id="@+id/rankNumber"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/titleRankList"
        android:gravity="center"
        android:text="@string/rank" />

    <TextView
        android:id="@+id/score"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:gravity="center"
  android:layout_toEndOf="@+id/rankNumber"
        android:layout_below="@+id/titleRankList"
        android:text="@string/score" />

    <TextView
        android:id="@+id/name"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/score"
        android:layout_below="@+id/titleRankList"
        android:text="@string/name" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_toEndOf="@id/name"
        android:layout_below="@+id/titleRankList"
        android:text="@string/level" />

    <TextView
        android:id="@+id/id"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/difficulty"
        android:layout_below="@+id/titleRankList"
        android:text="@string/id" />

<!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--        android:id="@+id/refresher"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="670dp">-->

    <ListView
        android:id="@+id/listHighScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rankNumber"
        android:layout_above="@+id/btnContinuePlay"/>
<!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/one_more_game"
        android:id="@+id/btnContinuePlay"
        android:layout_alignParentBottom="true" />
    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/exit"
        android:id="@+id/btnBackHome"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>