<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    >


    <TextView
        android:id="@+id/modelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/model_id" />

    <TextView

        android:id="@+id/modelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_name" />
    <TextView
        android:id="@+id/makeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_name" />


</LinearLayout>