<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
  >

    <TextView
        android:id="@+id/modelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/model_id" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/modelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modelID"
        android:text="@string/model_name" />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/makeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modelName"
        android:text="@string/make_name" />

<ImageButton
    android:id="@+id/starIcon"
    android:layout_width="25dip"
    android:layout_height="25dip"
    android:layout_marginEnd="20dp"
    android:foregroundGravity="center"
    android:layout_below="@id/modelName"
    android:layout_alignParentRight="true"
    android:background="@drawable/star"
    />
</RelativeLayout>