<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardataFragment"
    android:id="@+id/fLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/modelID"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Model_ID" />
        <TextView
            android:id="@+id/modelName"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Model_Name" />

        <TextView
            android:id="@+id/makeName"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make_Name" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/saving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
<!--            android:text="@string/save_to_database"-->
<!--            <Button-->
<!--                android:id="@+id/moving"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/saving"-->
<!--                android:text="remove from database"/>-->

            <Button
                android:id="@+id/viewing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             android:layout_below="@+id/saving"
                android:text="@string/viewing"/>
            <Button
                android:id="@+id/shopping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewing"
                android:text="@string/shopping"/>
            <Button
                android:id="@+id/hide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shopping"
                android:text="@string/HIDE"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>